fix: Active Item is hidden on mobile

--- a/src/scss/layouts/List.scss
+++ b/src/scss/layouts/List.scss
@@ -36,7 +36,7 @@
 }
 
 .page-layout--list__main {
-  display: hidden;
+  display: none;
 }
 
 @include b.breakpoint("sm") {
